Colaboratory を使用して作成しました

--- a/_notebooks/2021-10-05-KNN.ipynb
+++ b/_notebooks/2021-10-05-KNN.ipynb
@@ -6,7 +6,7 @@
       "name": "KNN.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNUkA7dv9Wp1rHkU6ONKoCO",
+      "authorship_tag": "ABX9TyPvs+duGTuKsUafYS+UEZTt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,6 +26,15 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/interkid/My_Research/blob/master/_notebooks/2021-10-05-KNN.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Xe2FtcULYiZx"
+      },
+      "source": [
+        "# KNN Algorithm"
       ]
     },
     {
