Colaboratory を使用して作成しました

--- a/_notebooks/2021-10-05-KNN.ipynb
+++ b/_notebooks/2021-10-05-KNN.ipynb
@@ -6,7 +6,7 @@
       "name": "KNN.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPvs+duGTuKsUafYS+UEZTt",
+      "authorship_tag": "ABX9TyNGHfkM3PJx/itbIEOKydoX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -84,6 +84,15 @@
         "### How is it used?\n",
         "* Dimensionality reduction stage\n",
         "  * Avoid sparse data"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xHGVuOz4c1Hh"
+      },
+      "source": [
+        "# K-means algorithm\n"
       ]
     },
     {
