--- a/_notebooks/2021-10-05-KNN.ipynb
+++ b/_notebooks/2021-10-05-KNN.ipynb
@@ -6,8 +6,7 @@
       "name": "KNN.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNGHfkM3PJx/itbIEOKydoX",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyPuaFkR3Q5ktIg0e8iSXS4f"
     },
     "kernelspec": {
       "name": "python3",
@@ -18,16 +17,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/interkid/My_Research/blob/master/_notebooks/2021-10-05-KNN.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -96,15 +85,50 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "FCZS_7Ha-ZxY"
+        "id": "EMAC0YHbeEMg"
       },
       "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
+        "## K-means: What's it for\n",
+        "* Unsupervised Learning for clustering\n",
+        "* Non-hierarchical cluster / hierarchical cluster"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "QjR2wR7cexoN"
+      },
+      "source": [
+        "![](https://github.com/interkid/My_Research/blob/master/images/k_means.png?raw=1)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "02XWZ8F_fyoB"
+      },
+      "source": [
+        "### The K-means steps are:\n",
+        "1. Select the value of K, to decide the number of clusters to be formed.\n",
+        "2. Select random K points which will act as centroids\n",
+        "3.  Assign each data point, based on their distance from the randomly selected points (Centroid), to the nearest/closest centroid which will form the predefined clusters.\n",
+        "4.  place a new centroid of each cluster.\n",
+        "5. Repeat step no.3\n",
+        "6. If any reassignment occurs, then go to step-4 else go to Step 7.\n",
+        "7. Finish\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lL8GHXnliInI"
+      },
+      "source": [
+        "Set randomly centeroid in step2, so It is important first value\n",
+        "- to use effectively setting automatically initial centroid"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -114,19 +138,9 @@
       "source": [
         "### Reference\n",
         "\n",
-        "[KNN (K-Nearest Neighbors) #1](https://towardsdatascience.com/knn-k-nearest-neighbors-1-a4707b24bd1d)"
+        "- [KNN (K-Nearest Neighbors) #1](https://towardsdatascience.com/knn-k-nearest-neighbors-1-a4707b24bd1d)\n",
+        "- [K Means Clustering Simplified in Python](https://www.analyticsvidhya.com/blog/2021/04/k-means-clustering-simplified-in-python/)"
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "aZZxWFXMEfsN"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
