Colaboratory を使用して作成しました

--- a/_notebooks/2021-10-30-RecommendSystem.ipynb
+++ b/_notebooks/2021-10-30-RecommendSystem.ipynb
@@ -6,7 +6,7 @@
       "name": "RecommendSystem.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPCTRHTUlQ9xorrIL5gPBXc"
+      "authorship_tag": "ABX9TyOmdMb/OW4h/S918pQDcLkS"
     },
     "kernelspec": {
       "name": "python3",
@@ -23,7 +23,7 @@
         "id": "XZ03luwHaWlw"
       },
       "source": [
-        "## Reccomend system introduction"
+        "# Reccomend system introduction"
       ]
     },
     {
@@ -1434,7 +1434,6 @@
       },
       "source": [
         "### REF\n",
-        "* [第3回　ベイジアンフィルタを実装してみよう](https://gihyo.jp/dev/serial/01/machine-learning/0003?page=2)\n",
         "* [data-science-from-scratch](https://github.com/joelgrus/data-science-from-scratch/blob/master/scratch/recommender_systems.py)"
       ]
     },
