Colaboratory を使用して作成しました

--- a/_notebooks/2021-10-27-CalabiYauManifold.ipynb
+++ b/_notebooks/2021-10-27-CalabiYauManifold.ipynb
@@ -6,7 +6,7 @@
       "name": "CreatingCalabiYauManifold.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNKh63liCl6nWKaW0NuOEbi"
+      "authorship_tag": "ABX9TyN8DorFU+aRkaHMeSvCiBsp"
     },
     "kernelspec": {
       "name": "python3",
@@ -17,6 +17,15 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "L-Hb2vV2A6EL"
+      },
+      "source": [
+        "# CreatingCalabiYauManifold"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
